syntax = "proto3";

package user;

service UsersService {
  rpc signup (AuthCredDto) returns (MessageResponse) {}
  rpc fetchUser(FectUserDTO) returns (User) {}
}

message AuthCredDto {
  string username = 1;
  string password = 2;
  string email = 3;
}

message MessageResponse {
  string message = 1;
}

message FectUserDTO {
  int32 page = 1;
  int32 size = 2;
}

message allUser {
  string email = 1;
  string username =2;
}

message User{
    repeated allUser User = 1;
}